# $Id: Changes,v 1.159 2004/11/04 03:15:55 markjugg Exp $
Revision history for Perl extension WWW::Mechanize

XXX
        [FIXES]
        * When parsing urls out of meta refresh tags, "url" may now be 
          uppercase (RT#8230)

        * Behavior of back() fixed in a number of cases (RT#8109  reported by
          Josh Purinton, patched by Dominique Quatravaux)

        [INTERNALS]
        * Mark figured out to how to prevent his text editor from putting tabs
          into the code. Andy's blood pressure dropped slightly. 

1.05_03 Sun Oct 31 20:54:33 CST 2004

        [ENHANCEMENTS]
        * click_button() has a new input option for HTML::Form::SubmitInput
          objects (DOMQ)

        * content() has new options to return the page formatted
          as text, with a <base href> added. (RT#8087, patch by
          Dominique Quatravaux)

        * update_html() method has been added, which can be used
          to modify the HTML that Mech parses. It should be sub-classed
          instead of _parse_html(), which has been deprecated.
          (RT#8087, patch by Dominique Quatravaux)

        * select() has new option to select an option by number
          (RT#5789, Scott Lanning)

        * WWW::Mechanize::Link now has support providing all the
          attributes of the link through a new attrs() method, which
          returns them as a hashref. This is a replacement for the
          alt() method, added in 1.05_01. It's not backwards
          compatible with that, but, hey, that's what developer
          releases are for. (RT#8092, Rob Casey and Mark Stosberg)

        [FIXES]
        * Upload <input type="file" ... > does not use the default
          value to prevent attacks, patch by Jan Pazdziora (RT #7843).

        [INTERNALS]
        * Improved tests and documentation for select() (RT#5789,
          Scott Lanning)

        * Improve taint-safeness on Perl 5.6.1 (RT#8042, patch by
          Dominique Quatravaux)
